# picopypi

./: .gitignore  Dockerfile  README.md  builds.jsonc  builds.toml  compose.yml  pyproject.toml
docs/: index.html
docs/brotli/: index.html
docs/pycryptodome/: index.html
docs/pycryptodomex/: index.html
src/picopypi/: __main__.py  build.py  gitutil.py  main.py  releases.py
src/picopypi/command/: build.py  build_armv7l.py  build_wheel.py  cibuildwheel.py  render.py
